# qp-events

./: .gitignore  .pre-commit-config.yaml  README.md  TASKS.md  autoresearcher.md  boundary_crossings.py  data_sweeper.py  explanation.md  mag_fft_sweeper.py  mission_trace.py  mission_trace_reader.py  paper.mplstyle  plan-events.md  pyproject.toml  scoreboard-mechanism.tsv  scoreboard-shape.tsv  scoreboard.tsv
.github/workflows/: ci.yml
cassinilib/: Core.py  DataPaths.py  DatetimeFunctions.py  Event.py  FileCheck.py  NewSignal.py  Plot.py  PlotFFT.py  PlotTimeseries.py  SelectData.py  Tic.py  ToMagneticCoords.py  Vector.py  Wave.py  __init__.py  io.py
docs/notes/: explanation.md  plan-events.md  wavesolver_reference.md
paper/: data-export-0LT.json  data-export-12LT.json  figure-descriptions.md  manuscript.md  referee-comments.md
scripts/: _common.py  bin_event_time.py  bin_event_time_v2.py  bin_event_time_v3.py  bin_events_round8.py  build_bg_archive.py  build_event_footprints.py  build_quality_flags.py  calibrate_threshold.py  compute_dwell_grid.py  cross_reference_published.py  diag_band_sensitivity.py  diag_ccap_effect.py  diag_cwt_threshold_comparison.py  diag_cwt_threshold_roc.py  diag_density_floor_sweep.py  diag_ellipticity_comparison.py  diag_fig10_classifier_vs_stokes.py  diag_shooter_clipping.py  diag_stokes_distribution.py  diag_trace_truncation.py  diag_uniform_dipole.py  diag_va_profile_rusaitis.py  diagnose_per_scenario.py  enrich_events_peak.py  enrich_events_v3.py  enrich_events_v4.py  fig01_qp60_example.py  fig02_orbit_dwelltime.py  fig03_fieldline_dwelltime.py  fig04_power_spectra.py  fig05_median_power_ratios.py  fig06_eigenfrequencies.py  fig07_event_dwell_ratio.py  fig07_phase8_final.py  fig07_round8.py  fig07_v2_event_dwell_ratio.py  fig08_phase8_inv_lat.py  fig08_qp60_heatmap.py  fig08_round8.py  (+31 more)
scripts/legacy/: calibrate_threshold.py  diag_ccap_effect.py  diag_density_floor_sweep.py  diag_shooter_clipping.py
src/qp/: __init__.py  cli.py  config.py  constants.py  time_utils.py
src/qp/analysis/: __init__.py  correlation.py  filtering.py  spectral_fitting.py
src/qp/benchmark/: __init__.py  generator.py  manifest.py  runner.py  scenarios.py  scoring.py
src/qp/coords/: __init__.py  ksm.py  mfa.py  transforms.py
src/qp/dwell/: __init__.py  grid.py  io.py  tracing.py
src/qp/events/: __init__.py  bands.py  binning.py  catalog.py  cooccurrence.py  dedup.py  detector.py  footprints.py  normalization.py  peak_kmag.py  peers.py  persistence.py  quality.py  ridge.py  sweep_loader.py  threshold.py  threshold_diag.py  wave_packets.py
src/qp/fieldline/: __init__.py  _numba_kernels.py  dwell_time.py  kmag_coefficients.py  kmag_model.py  saturn_coords.py  (+1 more)
tests/: conftest.py  fortran_reference_grid.txt  fortran_reference_params.txt  test_analytical_eigenmodes.py  test_backend_parity.py  test_bands.py  test_benchmark.py  test_config.py  test_cooccurrence.py  test_coords.py  test_correlation.py  test_cummings_solver.py  test_dedup.py  test_density.py  test_detect_continuous_periods.py  test_detect_round8_phase3.py  test_detector.py  test_detector_gate_boundaries.py  test_detector_multi.py  test_dwell_grid.py  test_event_footprints.py  test_event_gridding.py  test_event_persistence.py  test_events_catalog.py  test_field_profile.py  test_fig09_uses_round8.py  test_filtering.py  test_io_data_quality.py  test_io_pds.py  test_io_products.py  test_io_trajectory.py  test_kmag_model.py  test_mag_reader.py  test_matrix_solver.py  test_mfa.py  test_morphology.py  test_noise.py  test_normalization_floor.py  test_peak_kmag.py  test_peers.py  (+22 more)
wavesolver/: __init__.py  configurations.py  fieldline.py  helperFunctions.py  io.py  linalg.py  model.py  plot.py  shoot.py  sim.py
(+49 files in other folders)
